--- a/assets/style.css
+++ b/assets/style.css
@@ -16,10 +16,6 @@
 
 /* add html class default text sizing and default text properties*/
 
-/* html, body {
-    height: 100%;
-} */
-
 h1,
 h2,
 h3,
@@ -42,8 +38,7 @@ header {
     outline: 2px dashed var(--secondaryColor);
 }
 
-header h1 {
-    /* text-shadow: 0.1rem 0.1rem var(--whiteColor) ; */
+.header-title {
     color: var(--primaryColor);
 }
 
@@ -69,7 +64,7 @@ header h1 {
     margin-top: 1rem;
     margin-bottom: 1rem;
 
-    box-shadow: 0.1rem 0.1rem var(--whiteColor);
+    box-shadow: 0.08rem 0.08rem var(--whiteColor);
     background: var(--refGradient);
 }
 
@@ -90,12 +85,13 @@ header h1 {
 
 .banner-container{
     max-width: 960px;
-    margin-left:auto;
+    margin-left: auto;
     margin-right: auto;
 }
 
 .banner-subtitle {
     text-align: center;
+    /* text size not working? */
     font-size: 32;
 
     text-shadow: 1px 1px var(--whiteColor);
@@ -190,31 +186,45 @@ header h1 {
 .profile-contacts a {
     color: var(--whiteColor);
     font-family: fantasy;
-    padding: 10px 10px;
-
     text-decoration: none;
     text-align: center;
-    
+
+    padding: 10px 10px;
     margin: 3rem;
 
     background: var(--refGradient);
-    box-shadow: 0.1rem 0.1rem var(--whiteColor);
+    box-shadow: 0.08rem 0.08rem var(--whiteColor);
 }
 
 footer h4 {
-    text-shadow: 1px 1px var(--whiteColor);
+    text-shadow: 0.08rem 0.08rem var(--whiteColor);
     color: var(--orangeColor);
 }
 
-/* --QUERIES-- */
+/* HOVER EFFECT */
+.header-nav a:hover,
+.profile-contacts a:hover{
+    box-shadow:
+    inset 0 0 50px #fff,
+    inset 20px 0 80px #f0f,
+    inset -20px 0 80px #0ff,
+    inset 20px 0 300px #f0f,
+    inset -20px 0 300px #0ff,
+    0 0 50px #fff,
+    -10px 0 80px #f0f,
+    10px 0 80px #0ff;
+    transition: all 0.7s ease-in-out;
+}
 
-@media screen and (max-width: 1414px){
+/* --QUERIES-- */
+@media screen and (max-width: 1490px){
 
     .header-nav {
         flex-direction: column;
     }
 }
 
+/* not working? */
 @media screen and (max-width: 400px) {
 
     .profile-contacts {
